# excel-extractor

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART_EXCEL.md  README.md  batch_consolidate_excel.py  consolidate_excel.py  process_excel_directory.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: EXCEL_EXTRACTOR_GUIDE.md  EXCEL_GUIDE.md  EXCEL_HANDLER.md  FIND_EXCEL_GUIDE.md  LOGGING_CONFIGURATION.md  LOGGING_GUIDE.md  PRETTY_LOGGING_GUIDE.md
examples/: excel_examples.py  find_excel_example.py  logging_example.py  pretty_logging_example.py
scripts/: test_excel_setup.py  test_find_excel_module.py
src/: __init__.py  config.py  excel_examples.py  excel_handler.py  extract_excel_sheets.py  main.py
src/excel_consolidator/: __init__.py  batch.py  consolidator.py  detector.py  extractor.py  utils.py
src/excel_extractor/: __init__.py  extractor.py  utils.py
src/excel_handler/: __init__.py  exceptions.py  handler.py  quick.py  utils.py
src/find_excel_and_extract_sheets/: __init__.py  core.py
src/logger/: __init__.py  config_helper.py  logging_config.py  pretty.py
tests/: test_example.py  test_logging_fix.py
